Set min height to fix bumpiness on iOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ html {
 html,
 body {
   font-family: "Lato", sans-serif;
+  min-height: 100vh;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -307,7 +308,7 @@ img.teeko-image { width: 100%; }
 	display: inline-block;
 	width: $width;
 	height: $height;
-	scale: .8;
+	transform: scale(.8);
 	&-input {
 		display: none;
 	}
